--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -942,111 +942,119 @@ v, 181, 184, 186
 
 \hangindent=3pc \hangafter=1 Hardin, R. H. 130
 
-\hangindent=3pc \hangafter=1 headers, records with 85
+\hangindent=3pc \hangafter=1 headers, records with (带有头部的记录) 85
 
-\hangindent=3pc \hangafter=1 \verb'heapify' function 163, 165
+\hangindent=3pc \hangafter=1 \verb'heapify' function (函数 \verb'heapify') 163, 165
 
-\hangindent=3pc \hangafter=1 heapsort algorithm 162
+\hangindent=3pc \hangafter=1 heapsort algorithm (堆排序算法) 162
 
-\hangindent=3pc \hangafter=1 heapsort performance 165
+\hangindent=3pc \hangafter=1 heapsort performance (堆排序的性能) 165
 
-\hangindent=3pc \hangafter=1 heapsort, profiling 168-169
+\hangindent=3pc \hangafter=1 heapsort, profiling (堆排序的剖析) 168-169
 
 \hangindent=3pc \hangafter=1 Herbst, R. T. vi
 
-\hangindent=3pc \hangafter=1 \verb'histogram' program 70, 193
+\hangindent=3pc \hangafter=1 \verb'histogram' program (程序
+\verb'histogram') 70, 193
 
 \hangindent=3pc \hangafter=1 Hoare, C. A. R. 160
 
 \hangindent=3pc \hangafter=1 Hopcroft, J. E. 179
 
-\hangindent=3pc \hangafter=1 \verb'hsort' function 165
+\hangindent=3pc \hangafter=1 \verb'hsort' function (函数 \verb'hsort') 165
 
-\hangindent=3pc \hangafter=1 ICON language 186
+\hangindent=3pc \hangafter=1 ICON language (ICON 语言) 186
 
-\hangindent=3pc \hangafter=1 \verb'if-else' statement 14, 47
+\hangindent=3pc \hangafter=1 \verb'if-else' statement (\verb'if-else' 语句) 14, 47
 
-\hangindent=3pc \hangafter=1 implementation limits 59, 61-62, 191
+\hangindent=3pc \hangafter=1 implementation limits (实现的限制) 59, 61-62, 191
 
-\hangindent=3pc \hangafter=1 \verb'in' operator 52, 192
+\hangindent=3pc \hangafter=1 \verb'in' operator (运算符 \verb'in') 52, 192
 
-\hangindent=3pc \hangafter=1 increment operator, \verb'++' 39, 146, 158
+\hangindent=3pc \hangafter=1 increment operator, \verb'++' (自增运算符) 39, 146, 158
 
-\hangindent=3pc \hangafter=1 \verb'index' function 41
+\hangindent=3pc \hangafter=1 \verb'index' function (函数 \verb'index') 41
 
-\hangindent=3pc \hangafter=1 index, KWIC 122
+\hangindent=3pc \hangafter=1 index, KWIC (KWIC 索引) 122
 
-\hangindent=3pc \hangafter=1 indexing 124
+\hangindent=3pc \hangafter=1 indexing (索引) 124
 
-\hangindent=3pc \hangafter=1 indexing pipeline 129
+\hangindent=3pc \hangafter=1 indexing pipeline (索引流水线) 129
 
-\hangindent=3pc \hangafter=1 infinite loop, \verb'for(;;)' 49, 113
+\hangindent=3pc \hangafter=1 infinite loop, \verb'for(;;)' (无限循环) 49, 113
 
-\hangindent=3pc \hangafter=1 infix notation 142, 145
+\hangindent=3pc \hangafter=1 infix notation (中缀表示法) 142, 145
 
-\hangindent=3pc \hangafter=1 \verb'info' program 100
+\hangindent=3pc \hangafter=1 \verb'info' program (程序 \verb'info') 100
 
-\hangindent=3pc \hangafter=1 initialization, default 12-13, 35, 38, 45, 50-51, 54, 68, 181
+\hangindent=3pc \hangafter=1 initialization, default (默认的初始化)
+12-13, 35, 38, 45, 50-51, 54, 68, 181
 
-\hangindent=3pc \hangafter=1 initializing \verb'rand' 111
+\hangindent=3pc \hangafter=1 initializing \verb'rand' (初始化 \verb'rand') 111
 
-\hangindent=3pc \hangafter=1 input field separator 24, 35, 39, 60
+\hangindent=3pc \hangafter=1 input field separator (输入字段分隔符) 24, 35, 39, 60
 
-\hangindent=3pc \hangafter=1 input file, standard 59, 66
+\hangindent=3pc \hangafter=1 input file, standard (标准输入文件) 59, 66
 
-\hangindent=3pc \hangafter=1 input filename, \verb'-' standard 64, 116
+\hangindent=3pc \hangafter=1 input filename, \verb'-' standard
+(标准输入的文件名) 64, 116
 
-\hangindent=3pc \hangafter=1 input, fixed-field 72
+\hangindent=3pc \hangafter=1 input, fixed-field (字段固定的输入) 72
 
-\hangindent=3pc \hangafter=1 input line \verb'$0' 5
+\hangindent=3pc \hangafter=1 input line \verb'$0' (输入行的 \verb'$0') 5
 
-\hangindent=3pc \hangafter=1 input pipe, \verb'|' 62, 76
+\hangindent=3pc \hangafter=1 input pipe, \verb'|' (输入管理) 62, 76
 
-\hangindent=3pc \hangafter=1 input pushback 105, 110
+\hangindent=3pc \hangafter=1 input pushback (输入撤回) 105, 110
 
-\hangindent=3pc \hangafter=1 input, side-effects of 35
+\hangindent=3pc \hangafter=1 input, side-effects of (输入的副作用) 35
 
-\hangindent=3pc \hangafter=1 input-output, summary of 188
+\hangindent=3pc \hangafter=1 input-output, summary of (输入输出总结) 188
 
-\hangindent=3pc \hangafter=1 inserting commas 71
+\hangindent=3pc \hangafter=1 inserting commas (插入逗号) 71
 
-\hangindent=3pc \hangafter=1 insertion sort algorithm 153
+\hangindent=3pc \hangafter=1 insertion sort algorithm (插入排序算法) 153
 
-\hangindent=3pc \hangafter=1 insertion sort performance 158
+\hangindent=3pc \hangafter=1 insertion sort performance (插入排序的性能) 158
 
-\hangindent=3pc \hangafter=1 \verb'int' function 39-40
+\hangindent=3pc \hangafter=1 \verb'int' function (函数 \verb'int') 39-40
 
-\hangindent=3pc \hangafter=1 integer, rounding to nearest 40
+\hangindent=3pc \hangafter=1 integer, rounding to nearest (取整) 40
 
-\hangindent=3pc \hangafter=1 interactive test program 157
+\hangindent=3pc \hangafter=1 interactive test program (交互式的测试程序) 157
 
-\hangindent=3pc \hangafter=1 interactive testing 156
+\hangindent=3pc \hangafter=1 interactive testing (交互式的测试) 156
 
-\hangindent=3pc \hangafter=1 \verb'interest' program 15 
+\hangindent=3pc \hangafter=1 \verb'interest' program (程序 \verb'interest') 15 
 
-\hangindent=3pc \hangafter=1 \verb'isort' function 154
+\hangindent=3pc \hangafter=1 \verb'isort' function (函数 \verb'isort') 154
 
-\hangindent=3pc \hangafter=1 \verb'isort' function with counters 158
+\hangindent=3pc \hangafter=1 \verb'isort' function with counters
+(带计数功能的 \verb'isort' 函数) 158
 
-\hangindent=3pc \hangafter=1 \verb'ix.collapse' program 126
+\hangindent=3pc \hangafter=1 \verb'ix.collapse' program (程序
+\verb'ix.collapse') 126
 
-\hangindent=3pc \hangafter=1 \verb'ix.format' program 129 
+\hangindent=3pc \hangafter=1 \verb'ix.format' program (程序
+\verb'ix.format') 129 
 
-\hangindent=3pc \hangafter=1 \verb'ix.genkey' program 128 
+\hangindent=3pc \hangafter=1 \verb'ix.genkey' program (程序
+\verb'ix.genkey') 128 
 
-\hangindent=3pc \hangafter=1 \verb'ix.rotate' program 127 
+\hangindent=3pc \hangafter=1 \verb'ix.rotate' program (程序
+\verb'ix.rotate') 127 
 
-\hangindent=3pc \hangafter=1 \verb'ix.sort1' program 126
+\hangindent=3pc \hangafter=1 \verb'ix.sort1' program (程序 \verb'ix.sort1') 126
 
-\hangindent=3pc \hangafter=1 \verb'ix.sort2' program 128 
+\hangindent=3pc \hangafter=1 \verb'ix.sort2' program (程序 \verb'ix.sort2') 128 
 
-\hangindent=3pc \hangafter=1 \verb'join' command 104
+\hangindent=3pc \hangafter=1 \verb'join' command (命令 \verb'join') 104
 
-\hangindent=3pc \hangafter=1 join, natural 103
+\hangindent=3pc \hangafter=1 join, natural (自然连接) 103
 
-\hangindent=3pc \hangafter=1 \verb'join' program 104
+\hangindent=3pc \hangafter=1 \verb'join' program (程序 \verb'join') 104
 
-\hangindent=3pc \hangafter=1 justification, test 98, 201
+\hangindent=3pc \hangafter=1 justification, test (对齐的测试) 98, 201
 
 \hangindent=3pc \hangafter=1 Kernighan, B. W. 66, 130, 152, 186
 
@@ -1054,54 +1062,56 @@ v, 181, 184, 186
 
 \hangindent=3pc \hangafter=1 Knuth, Donald Ervin 82, 179, 198
 
-\hangindent=3pc \hangafter=1 KWIC index 122
+\hangindent=3pc \hangafter=1 KWIC index (KWIC 索引) 122
 
-\hangindent=3pc \hangafter=1 \verb'kwic' program 123, 203
+\hangindent=3pc \hangafter=1 \verb'kwic' program (程序 \verb'kwic') 123, 203
 
-\hangindent=3pc \hangafter=1 language, asembly 133
+\hangindent=3pc \hangafter=1 language, asembly (汇编语言) 133
 
-\hangindent=3pc \hangafter=1 language features, new v, 79, 182
+\hangindent=3pc \hangafter=1 language features, new (新的语言特性) v, 79, 182
 
-\hangindent=3pc \hangafter=1 language, Forth 142
+\hangindent=3pc \hangafter=1 language, Forth (Forth 语言) 142
 
-\hangindent=3pc \hangafter=1 language, \verb'grap' 139, 152
+\hangindent=3pc \hangafter=1 language, \verb'grap' (\verb'grap' 语言) 139, 152
 
-\hangindent=3pc \hangafter=1 language, \verb'graph' 135
+\hangindent=3pc \hangafter=1 language, \verb'graph' (\verb'graph' 语言) 135
 
-\hangindent=3pc \hangafter=1 language, ICON 186
+\hangindent=3pc \hangafter=1 language, ICON (ICON 语言) 186
 
-\hangindent=3pc \hangafter=1 language, pattern-directed 138, 140, 152, 156, 181
+\hangindent=3pc \hangafter=1 language, pattern-directed (面向模式的语言) 138, 140, 152, 156, 181
 
-\hangindent=3pc \hangafter=1 language, \verb'pic' 139
+\hangindent=3pc \hangafter=1 language, \verb'pic' (\verb'pic' 语言) 139
 
-\hangindent=3pc \hangafter=1 language, Postscript 142
+\hangindent=3pc \hangafter=1 language, Postscript (Postscript 语言) 142
 
-\hangindent=3pc \hangafter=1 language processor model 131
+\hangindent=3pc \hangafter=1 language processor model (语言处理器模型) 131
 
-\hangindent=3pc \hangafter=1 language, \textit{q} query 102, 107
+\hangindent=3pc \hangafter=1 language, \textit{q} query (\textit{q}
+查询语言) 102, 107
 
-\hangindent=3pc \hangafter=1 language, query 99
+\hangindent=3pc \hangafter=1 language, query (查询语言) 99
 
-\hangindent=3pc \hangafter=1 language, REXX 186
+\hangindent=3pc \hangafter=1 language, REXX (REXX 语言) 186
 
-\hangindent=3pc \hangafter=1 language, SNOBOL4 50, 182, 186
+\hangindent=3pc \hangafter=1 language, SNOBOL4 (SNOBOL4 语言) 50, 182, 186
 
-\hangindent=3pc \hangafter=1 language, \verb'sortgen' 140
+\hangindent=3pc \hangafter=1 language, \verb'sortgen' (\verb'sortgen' 语言) 140
 
-\hangindent=3pc \hangafter=1 leap year computation 194
+\hangindent=3pc \hangafter=1 leap year computation (闰年的计算) 194
 
-\hangindent=3pc \hangafter=1 leftmost longest match 42, 60, 80
+\hangindent=3pc \hangafter=1 leftmost longest match (最左最长匹配) 42, 60, 80
 
 % \hangindent=3pc \hangafter=1 \marginpar{208}
-\hangindent=3pc \hangafter=1 \verb'length' function 13-14
+\hangindent=3pc \hangafter=1 \verb'length' function (函数 \verb'length') 13-14
 
-\hangindent=3pc \hangafter=1 letters, form 100
+\hangindent=3pc \hangafter=1 letters, form (套用信函) 100
 
-\hangindent=3pc \hangafter=1 \verb'lex' lexical analyzer generator 152, 181, 186
+\hangindent=3pc \hangafter=1 \verb'lex' lexical analyzer generator
+(\verb'lex' 词法分析器生成程序) 152, 181, 186
 
-\hangindent=3pc \hangafter=1 lexical analysis 131, 133
+\hangindent=3pc \hangafter=1 lexical analysis (词法分析) 131, 133
 
-\hangindent=3pc \hangafter=1 limits, implementation 59, 61-62, 191
+\hangindent=3pc \hangafter=1 limits, implementation (实现的限制) 59, 61-62, 191
 
 \hangindent=3pc \hangafter=1 Linderman. J. P. vi
 
