--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1121,7 +1121,7 @@
 
 \hangindent=3pc \hangafter=1 new language features v, 79, 182
 
-\hangindent=3pc \hangafter=1 newline as neld separator 61,  83-84
+\hangindent=3pc \hangafter=1 newline as field separator 61,  83-84
 
 \hangindent=3pc \hangafter=1 newline character, \verb'\n' 8,31,79
 
