--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -706,7 +706,7 @@ v, 181, 184, 186
 
 \hangindent=3pc \hangafter=1 field variables (字段变量) 35
 
-\hangindent=3pc \hangafter=1 fields, named (命名的字段) 102, 107
+\hangindent=3pc \hangafter=1 fields, named (命名字段) 102, 107
 
 \hangindent=3pc \hangafter=1 file, \verb'capitals' (文件 \verb'capitals') 102
 
@@ -1116,124 +1116,141 @@ v, 181, 184, 186
 
 \hangindent=3pc \hangafter=1 Linderman. J. P. vi
 
-\hangindent=3pc \hangafter=1 linear algorithm 157, 183
+\hangindent=3pc \hangafter=1 linear algorithm (线性算法) 157, 183
 
-\hangindent=3pc \hangafter=1 linear order 170
+\hangindent=3pc \hangafter=1 linear order (线序) 170
 
-\hangindent=3pc \hangafter=1 lines versus records 21, 60
+\hangindent=3pc \hangafter=1 lines versus records (行与记录) 21, 60
 
-\hangindent=3pc \hangafter=1 little languages iv-v, 131, 152, 156, 159
+\hangindent=3pc \hangafter=1 little languages (小型语言) iv-v, 131, 152, 156, 159
 
-\hangindent=3pc \hangafter=1 local variables 54, 116, 182
+\hangindent=3pc \hangafter=1 local variables (局部变量) 54, 116, 182
 
-\hangindent=3pc \hangafter=1 \verb'log' function 39
+\hangindent=3pc \hangafter=1 \verb'log' function (函数 \verb'log') 39
 
-\hangindent=3pc \hangafter=1 logarithm, computation of base-10 39
+\hangindent=3pc \hangafter=1 logarithm, computation of base-10 (计算以 10
+为底的对数) 39
 
-\hangindent=3pc \hangafter=1 logical expression, value of 37
+\hangindent=3pc \hangafter=1 logical expression, value of (逻辑表达式的值) 37
 
-\hangindent=3pc \hangafter=1 logical operators 10, 31, 37
+\hangindent=3pc \hangafter=1 logical operators (逻辑运算符) 10, 31, 37
 
-\hangindent=3pc \hangafter=1 logical operators, precedence of 32
+\hangindent=3pc \hangafter=1 logical operators, precedence of (逻辑运算符
+的优先级) 32
 
-\hangindent=3pc \hangafter=1 long statements, continuing 15, 22, 188
+\hangindent=3pc \hangafter=1 long statements, continuing (长语句的延续)
+15, 22, 188
 
-\hangindent=3pc \hangafter=1 \verb'lorder' command 170
+\hangindent=3pc \hangafter=1 \verb'lorder' command (命令 \verb'lorder') 170
 
-\hangindent=3pc \hangafter=1 \verb'ls' command 177
+\hangindent=3pc \hangafter=1 \verb'ls' command (命令 \verb'ls') 177
 
 \hangindent=3pc \hangafter=1 Lukasiewicz. J. 142
 
-\hangindent=3pc \hangafter=1 machine dependency 35-36, 44-45, 51, 183
+\hangindent=3pc \hangafter=1 machine dependency (机器依赖) 35-36, 44-45, 51, 183
 
-\hangindent=3pc \hangafter=1 \verb'make' command 175
+\hangindent=3pc \hangafter=1 \verb'make' command (命令 \verb'make') 175
 
-\hangindent=3pc \hangafter=1 \verb'make' program 178
+\hangindent=3pc \hangafter=1 \verb'make' program (程序 \verb'make') 178
 
-\hangindent=3pc \hangafter=1 \verb'make' update algorithm 176
+\hangindent=3pc \hangafter=1 \verb'make' update algorithm (更新程序
+\verb'make') 176
 
-\hangindent=3pc \hangafter=1 \verb'makefile' dependency description 175
+\hangindent=3pc \hangafter=1 \verb'makefile' dependency description
+(\verb'makefile' 的依赖关系描述) 175
 
-\hangindent=3pc \hangafter=1 \verb'makeprof' program 167
+\hangindent=3pc \hangafter=1 \verb'makeprof' program (程序 \verb'makeprof') 167
 
-\hangindent=3pc \hangafter=1 manuscripts, cross-references in 120
+\hangindent=3pc \hangafter=1 manuscripts, cross-references in
+(手稿的交叉引用) 120
 
 \hangindent=3pc \hangafter=1 Martin, R. L. vi
 
-\hangindent=3pc \hangafter=1 \verb'match' function 35,41,149,182, 189, 196
+\hangindent=3pc \hangafter=1 \verb'match' function (函数 \verb'match')
+35,41,149,182, 189, 196
 
-\hangindent=3pc \hangafter=1 match, leftmost longest 42, 60, 80
+\hangindent=3pc \hangafter=1 match, leftmost longest (最左最长匹配) 42, 60, 80
 
-\hangindent=3pc \hangafter=1 match operator, \verb'~' 25, 27, 31, 37, 40
+\hangindent=3pc \hangafter=1 match operator, \verb'~' (匹配运算符 \verb'~')
+25, 27, 31, 37, 40
 
-\hangindent=3pc \hangafter=1 \verb'max' function 53
+\hangindent=3pc \hangafter=1 \verb'max' function (函数 \verb'max') 53
 
 \hangindent=3pc \hangafter=1 Mcllroy. M. D. vi, 130
 
-\hangindent=3pc \hangafter=1 metacharacters, regular expression 28, 191
+\hangindent=3pc \hangafter=1 metacharacters, regular expression
+(正则表达式的元字符) 28, 191
 
 \hangindent=3pc \hangafter=1 Miller. W. 179
 
-\hangindent=3pc \hangafter=1 model, language processor 131
+\hangindent=3pc \hangafter=1 model, language processor (语言处理器模型) 131
 
 \hangindent=3pc \hangafter=1 Moscovitz. H. S. vi
 
 \hangindent=3pc \hangafter=1 MS-DOS vi, 26
 
-\hangindent=3pc \hangafter=1 multidimensional arrays 52, 108, 114, 116, 182
+\hangindent=3pc \hangafter=1 multidimensional arrays (多维数组)
+52, 108, 114, 116, 182
 
-\hangindent=3pc \hangafter=1 multifile database 102
+\hangindent=3pc \hangafter=1 multifile database (多文件数据库) 102
 
-\hangindent=3pc \hangafter=1 multiline records iv, 60-61, 82
+\hangindent=3pc \hangafter=1 multiline records (多行记录) iv, 60-61, 82
 
-\hangindent=3pc \hangafter=1 multiple assignment 39
+\hangindent=3pc \hangafter=1 multiple assignment (复合赋值) 39
 
-\hangindent=3pc \hangafter=1 multiple \verb'BEGIN' and \verb'END' 23, 169
+\hangindent=3pc \hangafter=1 multiple \verb'BEGIN' and \verb'END' (多个
+\verb'BEGIN' 与 \verb'END') 23, 169
 
 \hangindent=3pc \hangafter=1 Myers. E. 179
 
-\hangindent=3pc \hangafter=1 $n \log n$ algorithm 162, 165
+\hangindent=3pc \hangafter=1 $n \log n$ algorithm ($n \log n$ 算法) 162, 165
 
-\hangindent=3pc \hangafter=1 named fields 102, 107
+\hangindent=3pc \hangafter=1 named fields (命名字段) 102, 107
 
-\hangindent=3pc \hangafter=1 names, rules for variable 35
+\hangindent=3pc \hangafter=1 names, rules for variable (变量的命令规则) 35
 
-\hangindent=3pc \hangafter=1 name-value data 86
+\hangindent=3pc \hangafter=1 name-value data (\mbox{名字}-值 类型的数据) 86
 
-\hangindent=3pc \hangafter=1 natural join 103
+\hangindent=3pc \hangafter=1 natural join (自然连接) 103
 
-\hangindent=3pc \hangafter=1 new language features v, 79, 182
+\hangindent=3pc \hangafter=1 new language features (新语言的特性) v, 79, 182
 
-\hangindent=3pc \hangafter=1 newline as neld separator 61,  83-84
+\hangindent=3pc \hangafter=1 newline as field separator (换行符作为字段分隔符)
+61,  83-84
 
-\hangindent=3pc \hangafter=1 newline character, \verb'\n' 8,31,79
+\hangindent=3pc \hangafter=1 newline character, \verb'\n' (换行符) 8,31,79
 
-\hangindent=3pc \hangafter=1 \verb'next' statement 49
+\hangindent=3pc \hangafter=1 \verb'next' statement (\verb'next' 语句) 49
 
-\hangindent=3pc \hangafter=1 \verb'NF', side-effects on 36, 61
+\hangindent=3pc \hangafter=1 \verb'NF', side-effects on (\verb'NF'
+的副作用) 36, 61
 
-\hangindent=3pc \hangafter=1 \verb'NF' variable 6, 14, 35-36, 61
+\hangindent=3pc \hangafter=1 \verb'NF' variable (变量 \verb'NF') 6, 14, 35-36, 61
 
-\hangindent=3pc \hangafter=1 \verb'nm' command 73
+\hangindent=3pc \hangafter=1 \verb'nm' command (命令 \verb'nm') 73
 
-\hangindent=3pc \hangafter=1 \verb'nm.format' program 74
+\hangindent=3pc \hangafter=1 \verb'nm.format' program (程序
+\verb'nm.format') 74
 
 
-\hangindent=3pc \hangafter=1 nonexistent field 36, 45, 192
+\hangindent=3pc \hangafter=1 nonexistent field (不存在的字段) 36, 45, 192
 
-\hangindent=3pc \hangafter=1 nonmatch operator, \verb'!~' 25, 27, 31, 37, 40
+\hangindent=3pc \hangafter=1 nonmatch operator, \verb'!~' (不匹配运算符
+\verb'!~') 25, 27, 31, 37, 40
 
-\hangindent=3pc \hangafter=1 nonterminal symbol 113.145
+\hangindent=3pc \hangafter=1 nonterminal symbol (非终结符) 113.145
 
-\hangindent=3pc \hangafter=1 NOT operator, \verb'!' 10,31,37
+\hangindent=3pc \hangafter=1 NOT operator, \verb'!' (逻辑 ``非'' 运算符)
+10,31,37
 
-\hangindent=3pc \hangafter=1 notation, exponential 35
+\hangindent=3pc \hangafter=1 notation, exponential (指数记号) 35
 
-\hangindent=3pc \hangafter=1 notation, infix 142, 145
+\hangindent=3pc \hangafter=1 notation, infix (中缀表示法) 142, 145
 
-\hangindent=3pc \hangafter=1 notation, reverse-Polish 142
+\hangindent=3pc \hangafter=1 notation, reverse-Polish (逆波兰式表示法) 142
 
-\hangindent=3pc \hangafter=1 \verb'NR' variable 6, 12, 14, 35-36, 61
+\hangindent=3pc \hangafter=1 \verb'NR' variable (变量 \verb'NR')
+6, 12, 14, 35-36, 61
 
 \hangindent=3pc \hangafter=1 null string 13,24,42, 114, 192
 
