--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1252,127 +1252,145 @@ v, 181, 184, 186
 \hangindent=3pc \hangafter=1 \verb'NR' variable (变量 \verb'NR')
 6, 12, 14, 35-36, 61
 
-\hangindent=3pc \hangafter=1 null string 13,24,42, 114, 192
+\hangindent=3pc \hangafter=1 null string (空字符串) 13,24,42, 114, 192
 
-\hangindent=3pc \hangafter=1 number, coercion to 45
+\hangindent=3pc \hangafter=1 number, coercion to (强制转换成数值) 45
 
-\hangindent=3pc \hangafter=1 number or string 44
+\hangindent=3pc \hangafter=1 number or string (数值或字符串) 44
 
-\hangindent=3pc \hangafter=1 number, regular expression for floating-point 30,40
+\hangindent=3pc \hangafter=1 number, regular expression for floating-point
+(浮点数的正则表达式) 30,40
 
-\hangindent=3pc \hangafter=1 number to string coercion 25
+\hangindent=3pc \hangafter=1 number to string coercion
+(数值强制转换成字符串) 25
 
-\hangindent=3pc \hangafter=1 number to string conversion 35,  44, 192
+\hangindent=3pc \hangafter=1 number to string conversion (数值到字符串的转换)
+35,  44, 192
 
-\hangindent=3pc \hangafter=1 numbers to words, convert 76
+\hangindent=3pc \hangafter=1 numbers to words, convert (数值转换成单词) 76
 
-\hangindent=3pc \hangafter=1 numeric comparison 25-26, 44
+\hangindent=3pc \hangafter=1 numeric comparison (数值比较) 25-26, 44
 
-\hangindent=3pc \hangafter=1 numeric constant 35
+\hangindent=3pc \hangafter=1 numeric constant (数值常量) 35
 
-\hangindent=3pc \hangafter=1 numeric subscripts 52
+\hangindent=3pc \hangafter=1 numeric subscripts (数值下标) 52
 
-\hangindent=3pc \hangafter=1 numeric value of a string 45
+\hangindent=3pc \hangafter=1 numeric value of a string (字符串的数值值) 45
 
-\hangindent=3pc \hangafter=1 numeric variables 44
+\hangindent=3pc \hangafter=1 numeric variables (数字形式的值) 44
 
-\hangindent=3pc \hangafter=1 \verb'numtowords' function 76, 194
+\hangindent=3pc \hangafter=1 \verb'numtowords' function (函数
+\verb'numtowords') 76, 194
 
-\hangindent=3pc \hangafter=1 \verb'OFMT' variable 36,45
+\hangindent=3pc \hangafter=1 \verb'OFMT' variable (变量 \verb'OFMT') 36,45
 
-\hangindent=3pc \hangafter=1 \verb'OFS' variable 35-36, 43, 55-56
+\hangindent=3pc \hangafter=1 \verb'OFS' variable (变量 \verb'OFS')
+35-36, 43, 55-56
 
-\hangindent=3pc \hangafter=1 one-liners 17, 181
+\hangindent=3pc \hangafter=1 one-liners (单行程序) 17, 181
 
-\hangindent=3pc \hangafter=1 operator, \verb'&&' AND 10,31,37, 158
+\hangindent=3pc \hangafter=1 operator, \verb'&&' AND (逻辑 ``与'' 运算符)
+10,31,37, 158
 
-\hangindent=3pc \hangafter=1 operator, \verb'%=' assignment 38
+\hangindent=3pc \hangafter=1 operator, \verb'%=' assignment (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 operator, \verb'*=' assignment 38
+\hangindent=3pc \hangafter=1 operator, \verb'*=' assignment (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 operator, \verb'+=' assignment 38
+\hangindent=3pc \hangafter=1 operator, \verb'+=' assignment (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 operator, \verb'-=' assignment 38
+\hangindent=3pc \hangafter=1 operator, \verb'-=' assignment (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 operator, \verb'/=' assignment 38
+\hangindent=3pc \hangafter=1 operator, \verb'/=' assignment (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 operator, \verb'^=' assignment 38
+\hangindent=3pc \hangafter=1 operator, \verb'^=' assignment (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 operator, \verb'=' assignment 38, 44
+\hangindent=3pc \hangafter=1 operator, \verb'=' assignment (赋值运算符) 38, 44
 
-\hangindent=3pc \hangafter=1 operator, \verb'>' comparison 9
+\hangindent=3pc \hangafter=1 operator, \verb'>' comparison (比较) 9
 
-\hangindent=3pc \hangafter=1 operator, \verb'>=' comparison 9
+\hangindent=3pc \hangafter=1 operator, \verb'>=' comparison (比较) 9
 
-\hangindent=3pc \hangafter=1 operator, \verb'==' comparison 9, 44
+\hangindent=3pc \hangafter=1 operator, \verb'==' comparison (比较) 9, 44
 
-\hangindent=3pc \hangafter=1 operator, \verb'—-' decrement 39, 70, 112
+\hangindent=3pc \hangafter=1 operator, \verb'—-' decrement (自减运算符)
+39, 70, 112
 
-\hangindent=3pc \hangafter=1 operator, \verb'^' exponentiation 15, 36, 46
+\hangindent=3pc \hangafter=1 operator, \verb'^' exponentiation (指数运算符)
+15, 36, 46
 
-\hangindent=3pc \hangafter=1 operator, \verb'++' increment 39, 146, 158
+\hangindent=3pc \hangafter=1 operator, \verb'++' increment (自增运算符)
+39, 146, 158
 
-\hangindent=3pc \hangafter=1 operator, \verb'~' match 25, 27, 31, 37, 40
+\hangindent=3pc \hangafter=1 operator, \verb'~' match (匹配运算符) 25, 27, 31, 37, 40
 
-\hangindent=3pc \hangafter=1 operator, \verb'!~' nonmatch 25, 27, 31,37,40
+\hangindent=3pc \hangafter=1 operator, \verb'!~' nonmatch (不匹配运算符)
+25, 27, 31,37,40
 
-\hangindent=3pc \hangafter=1 operator, \verb'~' NOT 10, 31. 37
+\hangindent=3pc \hangafter=1 operator, \verb'~' NOT (逻辑 ``非'' 运算符)
+10, 31. 37
 
-\hangindent=3pc \hangafter=1 operator, \verb'||' OR 10,31,37
+\hangindent=3pc \hangafter=1 operator, \verb'||' OR (逻辑 ``或'' 运算符)
+10,31,37
 
-\hangindent=3pc \hangafter=1 operator, \verb'%' remainder 36, 46
+\hangindent=3pc \hangafter=1 operator, \verb'%' remainder (取余) 36, 46
 
-\hangindent=3pc \hangafter=1 operator, concatenation 40, 43,  182
+\hangindent=3pc \hangafter=1 operator, concatenation (拼接) 40, 43,  182
 
-\hangindent=3pc \hangafter=1 operator, \verb'in' 52, 192
+\hangindent=3pc \hangafter=1 operator, \verb'in' (成员运算符 \verb'in') 52, 192
 
-\hangindent=3pc \hangafter=1 operators, arithmetic 36, 44
+\hangindent=3pc \hangafter=1 operators, arithmetic (算术运算符) 36, 44
 
-\hangindent=3pc \hangafter=1 operators, assignment 38
+\hangindent=3pc \hangafter=1 operators, assignment (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 operators, associativity of 46
+\hangindent=3pc \hangafter=1 operators, associativity of (运算符的结合性) 46
 
-\hangindent=3pc \hangafter=1 operators, comparison 36
+\hangindent=3pc \hangafter=1 operators, comparison (比较运算符) 36
 
-\hangindent=3pc \hangafter=1 operators, logical 10, 31, 37
+\hangindent=3pc \hangafter=1 operators, logical (逻辑运算符) 10, 31, 37
 
-\hangindent=3pc \hangafter=1 operators, precedence of 46
+\hangindent=3pc \hangafter=1 operators, precedence of (运算符的优先级) 46
 
-\hangindent=3pc \hangafter=1 operators, precedence of regular expression 30
+\hangindent=3pc \hangafter=1 operators, precedence of regular expression
+(正则表达式的优先级) 30
 
-\hangindent=3pc \hangafter=1 operators, relational 25, 37
+\hangindent=3pc \hangafter=1 operators, relational (关系运算符) 25, 37
 
-\hangindent=3pc \hangafter=1 operators, summary of 190
+\hangindent=3pc \hangafter=1 operators, summary of (运算符总结) 190
 
-\hangindent=3pc \hangafter=1 operators, table of arithmetic 46
+\hangindent=3pc \hangafter=1 operators, table of arithmetic (算术运算符表格) 46
 
-\hangindent=3pc \hangafter=1 operators, table of comparison 25
+\hangindent=3pc \hangafter=1 operators, table of comparison (比较运算符表格) 25
 
-\hangindent=3pc \hangafter=1 option, \verb'-f' 4-5,63,65, 187
+\hangindent=3pc \hangafter=1 option, \verb'-f' (选项 \verb'-f') 4-5,63,65, 187
 
-\hangindent=3pc \hangafter=1 option, \verb'-F' 60,63, 187
+\hangindent=3pc \hangafter=1 option, \verb'-F' (选项 \verb'-F') 60,63, 187
 
-\hangindent=3pc \hangafter=1 OR operator, \verb'||' 10, 31, 37
+\hangindent=3pc \hangafter=1 OR operator, \verb'||' (逻辑 ``或'' 运算符)
+10, 31, 37
 
-\hangindent=3pc \hangafter=1 \verb'ORS' variable 36, 55-56, 83
+\hangindent=3pc \hangafter=1 \verb'ORS' variable (变量 \verb'ORS') 36, 55-56, 83
 
-\hangindent=3pc \hangafter=1 output field separator 6, 35, 39, 55-56
+\hangindent=3pc \hangafter=1 output field separator (输出字段分隔符)
+6, 35, 39, 55-56
 
-\hangindent=3pc \hangafter=1 output file, standard 5, 56
+\hangindent=3pc \hangafter=1 output file, standard (标准输出) 5, 56
 
-\hangindent=3pc \hangafter=1 output into pipes 8, 58
+\hangindent=3pc \hangafter=1 output into pipes (输送给管道) 8, 58
 
-\hangindent=3pc \hangafter=1 output record separator 6, 55-56,  83
+\hangindent=3pc \hangafter=1 output record separator (输出记录分隔符)
+6, 55-56,  83
 
-\hangindent=3pc \hangafter=1 output redirection, \verb'>' 56, 58, 188
+\hangindent=3pc \hangafter=1 output redirection, \verb'>' (输出重定向)
+56, 58, 188
 
-\hangindent=3pc \hangafter=1 output redirection, \verb'>>' 56, 58, 188
+\hangindent=3pc \hangafter=1 output redirection, \verb'>>' (输出重定向) 56, 58, 188
 
-\hangindent=3pc \hangafter=1 output redirection, \verb'|' 58, 188
+\hangindent=3pc \hangafter=1 output redirection, \verb'|'
+(输出数据的字段分隔符) 58, 188
 
-\hangindent=3pc \hangafter=1 output statements, summary of 55
+\hangindent=3pc \hangafter=1 output statements, summary of (输出语句总结) 55
 
-\hangindent=3pc \hangafter=1 \verb'p12check' program 77
+\hangindent=3pc \hangafter=1 \verb'p12check' (程序 \verb'p12check') program 77
 
 \hangindent=3pc \hangafter=1 parameter, array 54
 
