--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1392,33 +1392,36 @@ v, 181, 184, 186
 
 \hangindent=3pc \hangafter=1 \verb'p12check' (程序 \verb'p12check') program 77
 
-\hangindent=3pc \hangafter=1 parameter, array 54
+\hangindent=3pc \hangafter=1 parameter, array (把数组作为参数) 54
 
-\hangindent=3pc \hangafter=1 parameter list 53, 116
+\hangindent=3pc \hangafter=1 parameter list (参数列表) 53, 116
 
-\hangindent=3pc \hangafter=1 parameter, scalar 54
+\hangindent=3pc \hangafter=1 parameter, scalar (标题参数) 54
 
-\hangindent=3pc \hangafter=1 parameters, formal 54
+\hangindent=3pc \hangafter=1 parameters, formal (形式参数) 54
 
-\hangindent=3pc \hangafter=1 parenthesis-free notation 142
+\hangindent=3pc \hangafter=1 parenthesis-free notation (不需要括号的表示法) 142
 
 \hangindent=3pc \hangafter=1 Parnas, D. L. 123, 130
 
-\hangindent=3pc \hangafter=1 parser generator, \verb'yacc' 152, 175
+\hangindent=3pc \hangafter=1 parser generator, \verb'yacc'
+(语法分析器生成程序 \verb'yacc') 152, 175
 
-\hangindent=3pc \hangafter=1 parsing, recursive-descent 145, 147-148
+\hangindent=3pc \hangafter=1 parsing, recursive-descent (递归下降语法分析)
+145, 147-148
 
-\hangindent=3pc \hangafter=1 partial order 170
+\hangindent=3pc \hangafter=1 partial order (偏序) 170
 
-\hangindent=3pc \hangafter=1 partitioning step, quicksort 160
+\hangindent=3pc \hangafter=1 partitioning step, quicksort
+(快速排序的划分操作) 160
 
-\hangindent=3pc \hangafter=1 \verb'passwd' program 78
+\hangindent=3pc \hangafter=1 \verb'passwd' program (程序 \verb'passwd') 78
 
-\hangindent=3pc \hangafter=1 password file, check 78
+\hangindent=3pc \hangafter=1 password file, check (密码文件检查) 78
 
-\hangindent=3pc \hangafter=1 pattern, \verb'BEGIN' 11,23,63
+\hangindent=3pc \hangafter=1 pattern, \verb'BEGIN' (模式 \verb'BEGIN') 11,23,63
 
-\hangindent=3pc \hangafter=1 pattern, \verb'END' 11,23,49
+\hangindent=3pc \hangafter=1 pattern, \verb'END' (模式 \verb'END') 11,23,49
 
 \hangindent=3pc \hangafter=1 pattern, range 32, 85, 187
 
