--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1447,7 +1447,7 @@
 
 \hangindent=3pc \hangafter=1 program, \verb'fmt' 120
 
-\hangindent=3pc \hangafter=1 program, \verb'fiat.just' 202
+\hangindent=3pc \hangafter=1 program, \verb'fmt.just' 202
 
 \hangindent=3pc \hangafter=1 program, \verb'form1' 91
 
